--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.recipe_book_ui">
    <application
-        android:label="recipe_book_ui"
+        android:label="RecipeBook"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
